--- a/Memoria/anexos.tex
+++ b/Memoria/anexos.tex
@@ -1,4 +1,7 @@
 \chapter{Anexo 1}
-
-% pueden hacer falta varios anexos
-%\chapter{Anexo 2}
+\begin{itemize}
+	\item Manual de instalación de Drupal 7: https://www.drupal.org/docs/7/install
+	\item Documentación de Ubercart: http://www.ubercart.org/docs
+	\item Documentación de Angularjs: https://docs.angularjs.org/api
+	\item Ejemplos de JsPDF: https://parall.ax/products/jspdf
+\end{itemize}
