--- a/Memoria/conclusiones.tex
+++ b/Memoria/conclusiones.tex
@@ -1,23 +1,23 @@
 \chapter{Conclusiones y trabajos futuros}
 
-Durante la realizaci√≥n de este \ac{TFM} se han integrado con √©xito diversas tecnolog√≠as que trabajan en conjuto para lograr un objetivo. En este caso concreto, y a modo de recordatorio, el objetivo era la generaci√≥n de documentos PDF a partir de la informaci√≥n obtenida de los productos de una plataforma de comercio electr√≥nico y las plantillas que haya creado un usuario administrador. Bajo el punto de vista de los objetivos, se puede decir que el proyecto ha resultado un √©xito ya que se cumplen tanto el objetivo general, como los objetivos espec√≠ficos y se ha conseguido realizar una extensi√≥n para Drupal completamente funcional y exportable, aun partiendo de un nivel de conocimientos bajo en PHP y Drupal.\\
+Durante la realizaciÛn de este \ac{TFM} se han integrado con Èxito diversas tecnologÌas que trabajan en conjuto para lograr un objetivo. En este caso concreto, y a modo de recordatorio, el objetivo era la generaciÛn de documentos PDF a partir de la informaciÛn obtenida de los productos de una plataforma de comercio electrÛnico y las plantillas que haya creado un usuario administrador. Bajo el punto de vista de los objetivos, se puede decir que el proyecto ha resultado un Èxito ya que se cumplen tanto el objetivo general, como los objetivos especÌficos y se ha conseguido realizar una extensiÛn para Drupal completamente funcional y exportable, aun partiendo de un nivel de conocimientos bajo en PHP y Drupal.\\
 
-Con respecto a la metodolog√≠a de trabajo utilizada, no se han encontrado mayores dificultades a la hora de aplicar el proceso Scrum al √°mbito de un \ac{TFM}, en realidad no se requiere de la implementaci√≥n de cambios mayores de la forma de trabajar en una colaboraci√≥n tutor/alumno y se siente que es la forma de trabajar adecuada para un proyecto de estas caracter√≠sticas. El product backlog es una gran herramienta ya que, incluso con el limitado tiempo con el que se ha contado en este caso, permite organizar el trabajo de manera r√°pida y sencilla, eligiendo que tareas se desempe√±ar√°n para cada entrega.\\
+Con respecto a la metodologÌa de trabajo utilizada, no se han encontrado mayores dificultades a la hora de aplicar el proceso Scrum al ·mbito de un \ac{TFM}, en realidad no se requiere de la implementaciÛn de cambios mayores de la forma de trabajar en una colaboraciÛn tutor/alumno y se siente que es la forma de trabajar adecuada para un proyecto de estas caracterÌsticas. El \textit{product backlog} es una gran herramienta ya que, incluso con el limitado tiempo con el que se ha contado en este caso, permite organizar el trabajo de manera r·pida y sencilla, eligiendo que tareas se desempeÒar·n para cada entrega.\\
 
-Como se ha comentado, una dificultad encontrada ha sido el tiempo disponible. Habiendo dispuesto de m√°s tiempo, se podr√≠a haber realizado una aplicaci√≥n m√°s s√≥lida, con un dise√±o m√°s atractivo y con m√°s funcionalidades.\\
+Como se ha comentado, una dificultad encontrada ha sido el tiempo disponible. Habiendo dispuesto de m·s tiempo, se podrÌa haber realizado una aplicaciÛn m·s sÛlida, con un diseÒo m·s atractivo y con m·s funcionalidades.\\
 
-Este proyecto podr√≠a ser continuado y extendido por otro alumno, tanto para un trabajo de una asignatura como para un proyecto propio, de modo que se proponen las siguientes mejoras:
+Este proyecto podrÌa ser continuado y extendido por otro alumno, tanto para un trabajo de una asignatura como para un proyecto propio, de modo que se proponen las siguientes mejoras:
 \begin{itemize}
 	\item Elegir de forma sencilla que elementos aparecen en una plantilla, ocultando los que no queremos mostrar.
-	\item Generaci√≥n de los elementos PDF gen√©ricos. Actualmente funciona para los elementos b√°sicos de un producto.
-	\item Adici√≥n de atributos de Ubercart a los documentos PDF. 
-	\item Permitir modificar la plantilla de producto dentro de un cat√°logo.
-	\item Redimensi√≥n de productos en cat√°logos.
-	\item Men√∫s de elementos de plantilla contextuales en vez de fijos.
-	\item Redimensi√≥n din√°mica arrastrando desde los bordes del elemento.
-	\item Permitir la selecci√≥n de tipo de fuente para el PDF.
-	\item Permitir a√±adir la portada y contraportada desde otro documento PDF.
-	\item Permitir a√±adir cabecera y pie a un PDF.
+	\item GeneraciÛn de los elementos PDF genÈricos. Actualmente funciona para los elementos b·sicos de un producto.
+	\item AdiciÛn de atributos de Ubercart a los documentos PDF. 
+	\item Permitir modificar la plantilla de producto dentro de un cat·logo.
+	\item RedimensiÛn de productos en cat·logos.
+	\item Men˙s de elementos de plantilla contextuales en vez de fijos.
+	\item RedimensiÛn din·mica arrastrando desde los bordes del elemento.
+	\item Permitir la selecciÛn de tipo de fuente para el PDF.
+	\item Permitir aÒadir la portada y contraportada desde otro documento PDF.
+	\item Permitir aÒadir cabecera y pie a un PDF.
 	\item Visor PDF integrado en Drupal.
-	\item Dise√±o mejorado y atractivo.
+	\item DiseÒo mejorado y atractivo.
 \end{itemize}
