--- a/Memoria/plantilla_PFC.tex
+++ b/Memoria/plantilla_PFC.tex
@@ -130,6 +130,8 @@
 \tableofcontents
 % ----------------- ÍNDICE DE FIGURAS ------------------
 \listoffigures
+% ----------------- ÍNDICE DE TABLAS ------------------
+\listoftables
 
 % ----------------- ACRÓNIMOS -----------------------
 \cleardoublepage
